// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login should render correctly 1`] = `
<div
  class="ui-provider"
  data-uses-unhanded-props="true"
  dir="ltr"
>
  <div
    class="ui-flex"
    data-uses-unhanded-props="true"
  >
    <div />
    <div
      class="ui-flex"
      data-uses-unhanded-props="true"
    >
      <span
        class="ui-text"
        data-uses-unhanded-props="true"
        dir="auto"
      >
        One more step before finishing connection
      </span>
      <span
        class="ui-text"
        data-uses-unhanded-props="true"
        dir="auto"
      >
        Once proceeding, we will ask you to authorize Microsoft Teams access through a separate window. Once it’s authorized, you can do more advanced settings on the Teams channel linked with Zeplin.
      </span>
    </div>
    <div>
      <button
        class="ui-button"
        data-aa-class="Button"
        data-uses-unhanded-props="true"
      >
        <span
          class="ui-button__content"
          data-uses-unhanded-props="true"
          dir="auto"
        >
          Log in Zeplin
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Login should render error row when an error is specified 1`] = `
<div
  class="ui-provider"
  data-uses-unhanded-props="true"
  dir="ltr"
>
  <div
    class="ui-flex"
    data-uses-unhanded-props="true"
  >
    <div />
    <div
      class="ui-flex"
      data-uses-unhanded-props="true"
    >
      <span
        class="ui-text"
        data-uses-unhanded-props="true"
        dir="auto"
      >
        One more step before finishing connection
      </span>
      <span
        class="ui-text"
        data-uses-unhanded-props="true"
        dir="auto"
      >
        Once proceeding, we will ask you to authorize Microsoft Teams access through a separate window. Once it’s authorized, you can do more advanced settings on the Teams channel linked with Zeplin.
      </span>
      <div
        class="ui-flex"
        data-uses-unhanded-props="true"
      >
        <span
          aria-hidden="true"
          class="ui-icon"
          role="img"
        >
          <svg
            focusable="false"
            role="presentation"
            viewBox="8 8 16 16"
          >
            <path
              d="M23.7 20L17.6 9.7c-.1-.2-.3-.4-.5-.5-.2-.1-.4-.2-.7-.2-.2 0-.5.1-.7.2-.2.1-.4.3-.5.5L9.2 20c-.1.2-.2.4-.2.7 0 .4.1.7.4 1 .3.3.6.4 1 .4h12.1c.4 0 .7-.1 1-.4.3-.3.4-.6.4-1 0-.3-.1-.5-.2-.7zM16 12.6c0-.3.2-.5.5-.5s.5.2.5.5v4.7c0 .3-.2.5-.5.5s-.5-.2-.5-.5v-4.7zm.5 8.2c-.4 0-.8-.3-.8-.8 0-.4.3-.8.8-.8s.8.3.8.8c0 .4-.4.8-.8.8z"
            />
          </svg>
        </span>
        <span
          class="ui-text"
          data-uses-unhanded-props="true"
          dir="auto"
        >
          Some error
        </span>
      </div>
    </div>
    <div>
      <button
        class="ui-button"
        data-aa-class="Button"
        data-uses-unhanded-props="true"
      >
        <span
          class="ui-button__content"
          data-uses-unhanded-props="true"
          dir="auto"
        >
          Log in Zeplin
        </span>
      </button>
    </div>
  </div>
</div>
`;
